Name:               hogre
Version:            0.0.1
Cabal-Version:      >= 1.2
License:            OtherLicense
License-File:       LICENSE
Author:             Antti Salonen<ajsalonen at gmail dot com>
Copyright:          Antti Salonen 2009
Stability:          Unstable
Category:           Graphics
Synopsis:           Very primitive binding to OGRE
description:        This package contains bindings to a subset of OGRE
                    (Object-Oriented Graphics Rendering Engine)
                    (<http://www.ogre3d.org/>).
Build-type:         Simple
extra-source-files: csrc/*

Library
  Build-Depends:     base, haskell98
  Hs-Source-Dirs:    src
  Ghc-options:       -Wall -O2
  cc-options:        -Wall -O2
  c-sources:         csrc/ogre_c.cpp
  pkgconfig-depends: OGRE, CEGUI, CEGUI-OGRE
  extra-libraries:   CEGUIOgreRenderer, OgreMain, CEGUIBase
  exposed-modules:   Graphics.Ogre.Ogre

