Name:               hogre
Version:            0.1.0
Cabal-Version:      >= 1.6
License:            MIT
License-File:       LICENSE
Author:             Antti Salonen<ajsalonen at gmail dot com>
Maintainer:         Antti Salonen<ajsalonen at gmail dot com>
Copyright:          Antti Salonen 2010
Stability:          Unstable
Homepage:           http://github.com/anttisalonen/hogre
Category:           Graphics
Synopsis:           Haskell binding to a subset of OGRE
description:        This package contains bindings to a subset of OGRE
                    (Object-Oriented Graphics Rendering Engine)
                    (<http://www.ogre3d.org/>).
Build-type:         Custom

source-repository head
  type:      git
  location:  git://github.com/anttisalonen/hogre.git

Library
  Build-Depends:     base >= 3 && < 5, haskell98
  Ghc-options:       -Wall
  cc-options:        -Wall
  pkgconfig-depends: OGRE
  extra-libraries:   OgreMain

